--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
     margin-top:18px;
   }
 
-  button:hover{opacity:.9;}
-
   .bulb{
     width:120px;
     height:120px;
@@ -94,6 +92,7 @@
   .moon{
     font-size:95px;
     animation:fadeIn 2.2s forwards;
+    margin-bottom:6px;
   }
 
   @keyframes fadeIn{
@@ -121,8 +120,8 @@
 
 <!-- PAGE 1 -->
 <div class="screen show" id="s1">
-  <p>Pull the wire gently 👇</p>
-  <button onclick="glowBulb()">Pull Wire</button>
+  <p>Tap the button gently 🫧</p>
+  <button onclick="glowBulb()">TAP</button>
   <div class="bulb" id="bulb"></div>
   <button id="next1" style="display:none" onclick="go(2)">Next</button>
 </div>
@@ -132,11 +131,10 @@
   <h3>Play a song first? 🎵</h3>
 
   <button onclick="playSong1()">Yes</button>
-
   <button onclick="skipSong()">No</button>
 
   <p id="noline" class="soft-note" style="display:none;">
-    No… but let it be ✨
+    No, but let it be ✨
   </p>
 
   <audio id="song1" src="song1.mp3"></audio>
@@ -158,22 +156,22 @@
 <!-- PAGE 5 -->
 <div class="screen" id="s5">
   <div class="animated-text" id="lines2"></div>
-  <button onclick="go(6)">Next</button>
+  <button onclick="go(6); showClosingLines();">Next</button>
 </div>
 
-<!-- PAGE 6 — MOON + STARS CLOSURE -->
+<!-- PAGE 6 -->
 <div class="screen" id="s6">
   <div class="moon">🌙</div>
 
-  <p style="margin-top:14px;">
-    Under the same sky… somewhere between the moon and the stars  
-    I’m just quietly grateful for you. ⭐
-  </p>
+  <div class="animated-text" id="closingLines"></div>
 
-  <div class="sign">— EREN</div>
+  <div class="sign">Maanavi</div>
 </div>
 
 <script>
+let song1 = document.getElementById("song1");
+let song2 = document.getElementById("song2");
+
 function go(n){
   document.querySelectorAll(".screen").forEach(s=>s.classList.remove("show"));
   document.getElementById("s"+n).classList.add("show");
@@ -185,25 +183,34 @@ function glowBulb(){
 }
 
 function playSong1(){
-  document.getElementById("song1").play();
+  song1.currentTime = 0;
+  song1.play();
   showLines1();
   go(3);
 }
 
 function skipSong(){
-  document.getElementById("noline").style.display="block";
-  setTimeout(()=>{ showLines1(); go(3); },1000);
+  const line = document.getElementById("noline");
+  line.style.display = "block";
+
+  song1.currentTime = 0;
+  song1.play();
+
+  setTimeout(()=>{
+    showLines1();
+    go(3);
+  }, 900);
 }
 
 function showLines1(){
   const text = [
-    "Hey, this for you 🌸",
-    "Not perfect… but from my heart.",
-    "You have this calm, peaceful vibe.",
-    "Even your tiny smiles feel warm.",
-    "You make days feel a little lighter.",
-    "So I wanted to say something",
-    "just slowly, gently… ✨"
+    "Hey, I made this for you 🌸",
+    "It may be simple but it is from my heart.",
+    "You have such a calm and beautiful vibe.",
+    "Your little smiles feel like sunshine.",
+    "You make everything feel softer and nicer.",
+    "I wanted to share what I feel",
+    "slowly and gently, with care ✨"
   ];
   const box = document.getElementById("lines1");
   box.innerHTML="";
@@ -216,24 +223,29 @@ function showLines1(){
 }
 
 function heartTap(){
-  document.getElementById("song2").play();
+  song1.pause();
+  song1.currentTime = 0;
+
+  song2.currentTime = 0;
+  song2.play();
+
   go(5);
   showLines2();
 }
 
 function showLines2(){
   const text = [
-    "You’re kind and I really admire that.",
-    "You don’t try to impress… you just be you.",
-    "And that’s honestly beautiful.",
-    "I notice your effort, even the small ones.",
-    "I like how gentle your presence feels.",
-    "You deserve respect, honesty and care.",
-    "I’m really glad I crossed paths with you.",
-    "Sometimes I don’t say it directly",
-    "but I genuinely appreciate you.",
+    "You are genuinely kind and I admire you so much.",
+    "You stay yourself and that makes you special.",
+    "Your honesty feels softly beautiful.",
+    "I notice the little things you do.",
+    "Your presence feels warm and peaceful.",
+    "You deserve care, respect and gentle love.",
+    "I am really happy I met you.",
+    "Even when I stay quiet, I still care.",
+    "You make my world feel a little brighter.",
     "Thank you for being you.",
-    "Stay safe, stay soft, stay you 🌷"
+    "Stay safe, stay soft, stay happy 🌷"
   ];
   const box = document.getElementById("lines2");
   box.innerHTML="";
@@ -244,7 +256,29 @@ function showLines2(){
     box.appendChild(span);
   });
 }
+
+function showClosingLines(){
+  const text = [
+    "The sky feels calm and quiet tonight.",
+    "Thank you for reading this with such a gentle heart.",
+    "I just wanted to leave a little smile with you.",
+    "No pressure and no rush, only warmth and honesty.",
+    "May your days stay soft and full of peaceful light.",
+    "I am truly grateful that you exist."
+  ];
+
+  const box = document.getElementById("closingLines");
+  box.innerHTML = "";
+
+  text.forEach((t,i)=>{
+    const span = document.createElement("span");
+    span.style.animationDelay = (0.45*i)+"s";
+    span.innerText = t;
+    box.appendChild(span);
+  });
+}
 </script>
 
 </body>
 </html>
+
